--- a/build.gradle
+++ b/build.gradle
@@ -11,10 +11,27 @@ dependencies {
     compile('org.scala-lang:scala-library:2.11.8')
     compile('org.apache.hadoop:hadoop-client:2.8.4')
     compile('com.typesafe:config:1.3.3')
-    testCompile("org.scalatest:scalatest_$scalaVersion:3.0.4")
+
+    testCompile('junit:junit:4.12')
+    testCompile("org.scalatest:scalatest_$scalaVersion:3.0.5")
+    testRuntime("org.scala-lang.modules:scala-xml_$scalaVersion:1.0.6")
 }
 
 repositories {
     mavenCentral()
     mavenLocal()
+}
+
+task javadocJar(type: Jar) {
+    classifier = 'javadoc'
+    from javadoc
+}
+
+task sourcesJar(type: Jar) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+artifacts {
+    archives javadocJar, sourcesJar
 }
