--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'scala'
     id 'maven'
+    id 'com.github.maiflai.scalatest' version '0.23'
 }
 
 group = "com.github.meandor"
@@ -8,13 +9,12 @@ group = "com.github.meandor"
 def scalaVersion = "2.11"
 
 dependencies {
-    compile('org.scala-lang:scala-library:2.11.8')
-    compile('org.apache.hadoop:hadoop-client:2.8.4')
-    compile('com.typesafe:config:1.3.3')
+    compile "org.scala-lang:scala-library:$scalaVersion.+"
+    compile 'org.apache.hadoop:hadoop-client:3.1.1'
 
-    testCompile('junit:junit:4.12')
-    testCompile("org.scalatest:scalatest_$scalaVersion:3.0.5")
-    testRuntime("org.scala-lang.modules:scala-xml_$scalaVersion:1.0.6")
+    testCompile "org.scalatest:scalatest_$scalaVersion:3.0.5"
+    testRuntime "org.scala-lang.modules:scala-xml_$scalaVersion:+"
+    testRuntime 'org.pegdown:pegdown:1.4.2'
 }
 
 repositories {
