--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,10 @@
 plugins {
     id 'scala'
     id 'maven'
+    id 'signing'
     id 'com.github.maiflai.scalatest' version '0.23'
+    id 'net.researchgate.release' version '2.4.0'
+    id 'io.codearte.nexus-staging' version '0.11.0'
 }
 
 group = "com.github.meandor"
@@ -34,4 +37,52 @@ task sourcesJar(type: Jar) {
 
 artifacts {
     archives javadocJar, sourcesJar
+}
+
+signing {
+    sign configurations.archives
+}
+
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+
+            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
+                authentication(userName: ossrhUsername, password: ossrhPassword)
+            }
+
+            snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
+                authentication(userName: ossrhUsername, password: ossrhPassword)
+            }
+
+            pom.project {
+                name 'mobius-chair'
+                packaging 'jar'
+                description 'Scala library for managing versions of datasets.'
+                url 'https://github.com/meandor/mobius-chair'
+
+                scm {
+                    url 'scm:git@github.com:meandor/mobius-chair.git'
+                    connection 'scm:git@github.com:meandor/mobius-chair.git'
+                    developerConnection 'scm:git@github.com:meandor/mobius-chair.git'
+                }
+
+                licenses {
+                    license {
+                        name 'Apache License'
+                        url 'https://github.com/meandor/transporter/blob/master/LICENSE'
+                    }
+                }
+
+                developers {
+                    developer {
+                        id 'dschruhl'
+                        name 'Daniel Schruhl'
+                        email 'danielschruhl@gmail.com'
+                    }
+                }
+            }
+        }
+    }
 }
