--- a/build.gradle
+++ b/build.gradle
@@ -12,11 +12,11 @@ group = "com.github.meandor"
 def scalaVersion = "2.11"
 
 dependencies {
-    compile "org.scala-lang:scala-library:$scalaVersion.+"
+    compile "org.scala-lang:scala-library:$scalaVersion.12"
     compile 'org.apache.hadoop:hadoop-client:3.1.1'
 
     testCompile "org.scalatest:scalatest_$scalaVersion:3.0.5"
-    testRuntime "org.scala-lang.modules:scala-xml_$scalaVersion:+"
+    testRuntime "org.scala-lang.modules:scala-xml_$scalaVersion:1.1.1"
     testRuntime 'org.pegdown:pegdown:1.4.2'
 }
 
