--- a/build.gradle
+++ b/build.gradle
@@ -27,12 +27,10 @@ repositories {
 }
 
 task javadocJar(type: Jar) {
-    classifier = 'javadoc'
     from javadoc
 }
 
 task sourcesJar(type: Jar) {
-    classifier = 'sources'
     from sourceSets.main.allSource
 }
 
@@ -60,19 +58,19 @@ uploadArchives {
             pom.project {
                 name 'mobius-chair'
                 packaging 'jar'
-                description 'Scala library for managing versions of datasets.'
-                url 'https://github.com/meandor/mobius-chair'
+                description 'Library for managing versions of datasets or models.'
+                url 'https://github.com/DiscoverAI/mobius-chair-jvm'
 
                 scm {
-                    url 'scm:git@github.com:meandor/mobius-chair.git'
-                    connection 'scm:git@github.com:meandor/mobius-chair.git'
-                    developerConnection 'scm:git@github.com:meandor/mobius-chair.git'
+                    url 'scm:git@github.com:DiscoverAI/mobius-chair-jvm.git'
+                    connection 'scm:git@github.com:DiscoverAI/mobius-chair-jvm.git'
+                    developerConnection 'scm:git@github.com:DiscoverAI/mobius-chair-jvm.git'
                 }
 
                 licenses {
                     license {
                         name 'Apache-2.0 License'
-                        url 'https://github.com/meandor/transporter/blob/master/LICENSE'
+                        url 'https://raw.githubusercontent.com/DiscoverAI/mobius-chair-jvm/master/LICENSE'
                     }
                 }
 
