--- a/build.gradle
+++ b/build.gradle
@@ -2,23 +2,23 @@ plugins {
     id 'scala'
     id 'maven'
     id 'signing'
-    id 'com.github.maiflai.scalatest' version '0.23'
+    id 'com.github.maiflai.scalatest' version '0.26'
     id 'net.researchgate.release' version '2.6.0'
-    id 'io.codearte.nexus-staging' version '0.20.0'
+    id 'io.codearte.nexus-staging' version '0.21.2'
 }
 
 group = "com.github.meandor"
 
-def scalaVersion = "2.11"
+def scalaCompatVersion = "2.13"
+def scalaVersion = "$scalaCompatVersion.2"
 
 dependencies {
-    compile "org.scala-lang:scala-library:$scalaVersion.12"
-    compile "com.typesafe.scala-logging:scala-logging_$scalaVersion:3.9.0"
-    compile 'org.apache.hadoop:hadoop-client:2.8.5'
+    compile "org.scala-lang:scala-library:$scalaVersion"
+    compile "com.typesafe.scala-logging:scala-logging_$scalaCompatVersion:3.9.2"
+    compile 'org.apache.hadoop:hadoop-client:3.2.1'
 
-    testCompile "org.scalatest:scalatest_$scalaVersion:3.0.5"
-    testRuntime "org.scala-lang.modules:scala-xml_$scalaVersion:1.1.1"
-    testRuntime 'org.pegdown:pegdown:1.4.2'
+    testCompile "org.scalatest:scalatest_$scalaCompatVersion:3.1.2"
+    testRuntime 'com.vladsch.flexmark:flexmark-all:0.35.10'
 }
 
 repositories {
